--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>This is my school webside and it is very cool</h1>
-<h2>This is also my first webside so I am very proud</h2>
+<h2 style="color:Tomato;">This is also my first webside so I am very proud</h2>
 <p1>I can do this now I am a pro</p1>
 <p2>OOOOOOOOOOOOO</p2>
 
