--- a/index.html
+++ b/index.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Extrem icecream eating here</title>
+
+<title>Page 1</title>
 </head>
 <body>
-  <body style="background-color:rgb(229,237,224);">
 
-<h1>This is my school webside and it is very cool</h1>
-<h2 style="color:Tomato;">This is also my first webside so I am very proud</h2>
-<p1>I can do this now I am a pro</p1>
-<p2>OOOOOOOOOOOOO</p2>
+<style>
+    
 
-</body>
-</html>
+</style>
+
+<h1>This is my page</h1>
+<p>Hello There</p>
+<p2>General kenobi</p2>
+<br>
+<a href="https://nyafilmer.wtf/star-wars-episode-ii-attack-of-the-clones/">Very nice film</a>
+<br>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" />
+<br>
+<br>
+<a href="page2.html">This is my second page</a>
+<br>
+<a href="https://www.w3schools.com/html/default.asp">
+<img src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
+</a>
+
+<a href="https://kajk03.github.io/">kolla in den här sidan också</a>
+<br>
+<a href="mailto:wisel331@edu.linkoping.se"
+
+
+
+
+
+
+
+
