--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <a href="https://kajk03.github.io/">kolla in den här sidan också</a>
 <br>
-<a href="mailto:wisel331@edu.linkoping.se"
+<a href="mailto:wisel331@edu.linkoping.se">Min mail</a>
 
 
 
