--- a/page2.html
+++ b/page2.html
@@ -1,10 +1,94 @@
 <!DOCTYPE html>
 <html>
     <head>
-<title>Page 2</title>
-<h1>This is the best page in the word</h1>
-<p>Look at this shit</p>
-<img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Bundesarchiv_Bild_193-04-1-26%2C_Schlachtschiff_Bismarck.jpg" />
+        <title>Nice Things</title>
+    </head>
 
-</head>
+    <style>
+
+        header{
+            text-align: center;
+            padding: 50px;
+            background-color: rgb(203, 235, 235);
+            color: deepskyblue;
+            font-size: 30px;
+            height: 120px;
+        }
+
+        footer{
+            text-align: center;
+            padding: 50px;
+            background-color: rgb(195, 219, 219);
+            color: rgb(194, 166, 226);
+            font-size: 30px;
+        }
+
+        body{
+            background-color: rgb(234, 236, 236);
+            color: rgb(0, 0, 0);
+            font-size: 25px;
+        }
+
+        .sidenav {
+            height: 100%;
+            width: 10%;
+            position: fixed;
+            z-index: 1;
+            top: 0;
+            left: 0;
+            background-color: rgb(204, 186, 150);
+            overflow-x: hidden;
+            padding-top: 20px;
+        }
+
+        .sidenav a{
+            padding: 6px 8px 6px 16px;
+            text-decoration: none;
+            font-size: 25px;
+            color: rgb(0, 0, 0);
+            display: block;
+        }
+
+        .sidenav a:hover{
+            color: hotpink;
+        }
+
+        .main{
+            margin-left: 10%;
+            font-size: 25px;
+            padding: 0px 10px;
+        }
+
+    @media screen and (max-heigth:450px){
+        .sidenav{padding-top: 15px;}
+        .sidenav a{font-size: 18px;}
+    }
+
+
+
+
+    </style>
+
+<div class="sidenav">
+    <a href="https://www.youtube.com/">Very Cool</a>
+</div>
+
+
+<header>
+    <h1>This is Cool</h1>
+</header>
+
+<body>
+    
+<div class="main">
+    <p1>I like this shit</p1>
+    <br>
+    <p2>ooooooooooo</p2>
+
+</div>
+
+
+
+
+</body>
 </html>
