--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<title>Page 1</title>
+<body style="background: cornsilk">
+<title>Home Page</title>
 </head>
 <body>
 
 <style>
+    header{
+        text-align: center;
+            padding: 50px;
+            background-color: rgb(191, 206, 166);
+            color: rgb(0, 0, 0);
+            font-size: 30px;
+            height: 100px;
+    }
     
 
 </style>
 
-<h1>This is my page</h1>
+<header>
+    <h1>This is my page</h1>
+</header>
+<body>
 <p>Hello There</p>
 <p2>General kenobi</p2>
 <br>
@@ -20,20 +31,33 @@
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" />
 <br>
 <br>
+<h2>Look at My Other pages</h2>
 <a href="page2.html">This is my second page</a>
 <br>
+<a href="page3.html">This is third third page</a>
+<br>
 <a href="https://www.w3schools.com/html/default.asp">
+<br>
 <img src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
 </a>
 <br>
-<a href="https://kajk03.github.io/">kolla in den här sidan också</a>
+<a href="https://kajk03.github.io/">kolla in den här sidan också, Axel</a>
 <br>
+<a href="https://theseamonster.github.io/">larssons very bra hemsida</a>
+<h2>Om du vill kontakta mig</h2>
 <a href="mailto:wisel331@edu.linkoping.se">Min mail</a>
 
+<h3>A very nice list</h3>
+<ul>
+    <li>köp mjölk</li>
+    <li>släng den i vattnet</li>
+</ul>
+
+</body>
 
 
 
 
 
-
-
+</head>
+</html>
