--- a/page2.html
+++ b/page2.html
@@ -2,6 +2,7 @@
 <html>
     <head>
 <title>Boat</title>
+<a href="index.html">Back to Home Page</a>
 <h1>This is the best boat in the word</h1>
 <p>Look at this shit</p>
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Bundesarchiv_Bild_193-04-1-26%2C_Schlachtschiff_Bismarck.jpg" />
