--- a/schakespeare.html
+++ b/schakespeare.html
@@ -2,7 +2,7 @@
 <html>
 <title>super litt</title>
 <head>
-<a href="index.html">Schakespeare is best</a>
+<a href="index.html">Back to Home Page</a>
 </head>
 <body style="background-color: burlywood">
 
