--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background: cornsilk">
+<body style="background: rgb(238, 237, 234)">
 <title>Home Page</title>
 </head>
 <body>
@@ -10,7 +10,7 @@
     header{
         text-align: center;
             padding: 50px;
-            background-color: rgb(191, 206, 166);
+            background-color: rgb(112, 175, 204);
             color: rgb(0, 0, 0);
             font-size: 30px;
             height: 100px;
@@ -28,7 +28,9 @@
 <br>
 <a href="https://nyafilmer.wtf/star-wars-episode-ii-attack-of-the-clones/">Very nice film</a>
 <br>
+<a href="https://en.wikipedia.org/wiki/Otto_von_Bismarck">
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" />
+</a>
 <br>
 <br>
 <h2>Look at My Other pages</h2>
@@ -37,8 +39,9 @@
 <a href="page3.html">This is third third page</a>
 <br>
 <a href="schakespeare.html">This is a poem</a>
-<a href="https://www.w3schools.com/html/default.asp">
 <br>
+<br>
+<a href="https://www.w3schools.com/html/default.asp">
 <img src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
 </a>
 <br>
