--- a/page2.html
+++ b/page2.html
@@ -2,10 +2,14 @@
 <html>
     <head>
 <title>Boat</title>
+</head>
+<body style="background-color: rgb(200, 203, 204)">
 <a href="index.html">Back to Home Page</a>
 <h1>This is the best boat in the word</h1>
 <p>Look at this shit</p>
+<a href="https://en.wikipedia.org/wiki/German_battleship_Bismarck">
 <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Bundesarchiv_Bild_193-04-1-26%2C_Schlachtschiff_Bismarck.jpg" />
+</a>
+</body>
 
-</head>
 </html>
