--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html>
 <head>
@@ -40,6 +41,8 @@
 <br>
 <a href="schakespeare.html">This is a poem</a>
 <br>
+<a href="cv.html">Det här är mitt CV</a>
+<br>
 <br>
 <a href="https://www.w3schools.com/html/default.asp">
 <img src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
@@ -57,6 +60,10 @@
     <li>köp mjölk</li>
     <li>släng den i vattnet</li>
 </ul>
+<br>
+<br>
+<br>
+<br>
 
 </body>
 
