--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-  
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,6 +15,15 @@
             font-size: 30px;
             height: 100px;
     }
+
+    .img{
+        border-color: rgb(122, 19, 19);
+    }
+
+    .body1{
+        margin-left:100px;
+    }
+
     
 
 </style>
@@ -29,11 +37,14 @@
 <br>
 <a href="https://nyafilmer.wtf/star-wars-episode-ii-attack-of-the-clones/">Very nice film</a>
 <br>
+<div class="img">
 <a href="https://en.wikipedia.org/wiki/Otto_von_Bismarck">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" />
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" width="1000px" height="250px"/>
 </a>
+</div>
 <br>
 <br>
+<div class="body1">
 <h2>Look at My Other pages</h2>
 <a href="page2.html">This is my second page</a>
 <br>
@@ -42,6 +53,7 @@
 <a href="schakespeare.html">This is a poem</a>
 <br>
 <a href="cv.html">Det här är mitt CV</a>
+</div>
 <br>
 <br>
 <a href="https://www.w3schools.com/html/default.asp">
@@ -61,6 +73,21 @@
     <li>släng den i vattnet</li>
 </ul>
 <br>
+
+<table>
+    <tr>
+        <th>hej</th>
+        <th>då</th>
+        <th>på</th>
+    </tr>
+
+    <tr>
+        <td>hej</td>
+        <td>då</td>
+        <td>på</td>
+    </tr>
+</table>
+
 <br>
 <br>
 <br>
