--- a/page2.html
+++ b/page2.html
@@ -2,14 +2,46 @@
 <html>
     <head>
 <title>Boat</title>
-</head>
-<body style="background-color: rgb(200, 203, 204)">
 <a href="index.html">Back to Home Page</a>
+</head>
+
+<style>
+    .header{
+        text-align: center;
+        color: black;
+        font-size: 25px;
+        background-color: red;
+        padding: 20px;
+    }
+
+
+
+    img{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+</style>
+
+<body style="background-color: rgb(200, 203, 204)">
+
+
+
+<div class="header">
 <h1>This is the best boat in the word</h1>
-<p>Look at this shit</p>
+</div>
+
+
+
+<div class="iframe">
+<iframe src="https://en.wikipedia.org/wiki/German_battleship_Bismarck" width="1000" height="500"></iframe>
+</div>
+<br>
 <a href="https://en.wikipedia.org/wiki/German_battleship_Bismarck">
-<img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Bundesarchiv_Bild_193-04-1-26%2C_Schlachtschiff_Bismarck.jpg" />
-</a>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fe/Bundesarchiv_Bild_193-04-1-26%2C_Schlachtschiff_Bismarck.jpg" />
+    </a>
+    
 </body>
 
 </html>
