--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
 <a href="schakespeare.html">This is a poem</a>
 <br>
 <a href="cv.html">Det här är mitt CV</a>
+<br>
+<a href="page4.html">This is my fourth page</a>
+<br>
+<a href="page5.html">This is my fifth page</a>
+<br>
+<a href="page6.html">This is my sixth page</a>
 </div>
 <br>
 <br>
