--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Wilhelms Vapenbutik</title>
-    <link href="style.css"
+    <link href="style2.css"
     rel="stylesheet"
     type="text/css">
 </head>
