--- a/bolag.html
+++ b/bolag.html
@@ -20,10 +20,10 @@
 
         <div class="meny">
             <ul>
-                <li> <a href="#">Hem</a> </li>
-                <li> <a href="#">Resmål</a> </li>
-                <li> <a href="#">Priser</a> </li>
-                <li> <a href="#">Kontakt</a> </li>
+                <li> <a href="bolag.html">Hem</a> </li>
+                <li> <a href="https://sv.wikipedia.org/wiki/Lockheed_Martin_F-22_Raptor">Annat najs flygplan</a> </li>
+                <li> <a href="https://www.facebook.com/groups/Flygplantillsalu/">Köpa flygplan?</a> </li>
+                <li> <a href="https://www.forsvarsmakten.se/sv/information-och-fakta/var-historia/artiklar/saab-hjarta-flygvapnet/">aaaa</a> </li>
             </ul>
 
         </div>
@@ -36,10 +36,10 @@
 
     </section>
 
-    <h2>Flygplan</h2>
+    <h2>Våra Bästa Flygplan</h2>
 
     <section class="resmal">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/b4/AIRPOWER16_-_Air_to_Air_SK35C_Draken_%28color%29.jpg">
+        <img src="https://i.imgur.com/CmE6b16.jpg">
         <h3>SAAB 35 Draken</h3>
         <p class="resmal_info"> 
             Saab 35 Draken är ett enmotorigt svenskt jaktflygplan med dubbel deltavinge som utvecklades av Saab AB för det svenska 
@@ -86,27 +86,41 @@
     <br>
     <section class="maps">
 
-        <h2>SAAB</h2>
+        <h2>Lite mer om tillverkarna och utvecklarna SAAB AB</h2>
         <iframe width="970" height="450" frameborder="0" style="border:0" src="https://sv.wikipedia.org/wiki/Saab_AB" ></iframe>
 
     </section>
 
 </div>
-
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 <footer>
-    <section class="inner_footer"></section>
-    <div class="footerbox">
-        <h3>Kontakt</h3>
-        <p>07584392</p>
-        <p>jeje@gmail.com</p>
-        <p>bobobobo hehehehe</p>
-    </div>
-    <div class="footerbox">
-        <h3>Följ oss</h3>
-    </div>
-    <div class="footerbox">
-        <h3>Nyhetsbrev</h3>
-    </div>
+    <section class="inner_footer">
+
+        <div class="footerbox">
+            <h3 class="h3footer">Kontakt</h3>
+            <p><strong>Telefon:</strong> 07584392</p>
+            <p><strong>Mail:</strong> jeje@gmail.com</p>
+            <p><strong>Våran Slogan:</strong> bobobobo hehehehe</p>
+        </div>
+
+        <div class="footerbox">
+            <h3 class="h3footer">Följ oss</h3>
+            <p><strong>Instagram: </strong>No Instagramos</p>
+            <p><strong>Annat skit: </strong> Inget annat skit</p>
+            <p><strong>Säkert? </strong> Helt Säkert</p>
+        </div>
+
+        <div class="footerbox">
+            <h3 class="h3footer">Nyhetsbrev</h3>
+            <p>Vi är högst seriösa och håller inte på med sånt skit</p>
+        </div>
+
+    </section>
 
 </footer>
 
