--- a/bolag.html
+++ b/bolag.html
@@ -23,7 +23,7 @@
                 <li> <a href="bolag.html">Hem</a> </li>
                 <li> <a href="https://sv.wikipedia.org/wiki/Lockheed_Martin_F-22_Raptor">Annat najs flygplan</a> </li>
                 <li> <a href="https://www.facebook.com/groups/Flygplantillsalu/">Köpa flygplan?</a> </li>
-                <li> <a href="https://www.forsvarsmakten.se/sv/information-och-fakta/var-historia/artiklar/saab-hjarta-flygvapnet/">aaaa</a> </li>
+                <li> <a href="http://www.aa.se/">aa</a> AA </li>
             </ul>
 
         </div>
@@ -35,6 +35,9 @@
         <img class="flygplan" src="https://static.feber.se/article_images/48/69/09/486909.jpg">
 
     </section>
+
+    <h2>Lite Kul skit</h2>
+    <p><a href="https://www.forsvarsmakten.se/sv/information-och-fakta/var-historia/artiklar/saab-hjarta-flygvapnet/">Klicka här tönt</a></p>
 
     <h2>Våra Bästa Flygplan</h2>
 
