--- a/bolag.html
+++ b/bolag.html
@@ -23,7 +23,7 @@
                 <li> <a href="bolag.html">Hem</a> </li>
                 <li> <a href="https://sv.wikipedia.org/wiki/Lockheed_Martin_F-22_Raptor">Annat najs flygplan</a> </li>
                 <li> <a href="https://www.facebook.com/groups/Flygplantillsalu/">Köpa flygplan?</a> </li>
-                <li> <a href="http://www.aa.se/">aa</a> AA </li>
+                <li> <a href="http://www.aa.se/">aa</a></li>
             </ul>
 
         </div>
@@ -36,8 +36,6 @@
 
     </section>
 
-    <h2>Lite Kul skit</h2>
-    <p><a href="https://www.forsvarsmakten.se/sv/information-och-fakta/var-historia/artiklar/saab-hjarta-flygvapnet/">Klicka här tönt</a></p>
 
     <h2>Våra Bästa Flygplan</h2>
 
@@ -106,7 +104,7 @@
 
         <div class="footerbox">
             <h3 class="h3footer">Kontakt</h3>
-            <p><strong>Telefon:</strong> 07584392</p>
+            <p><strong>Telefon:</strong>  08-642 26 09 </p>
             <p><strong>Mail:</strong> jeje@gmail.com</p>
             <p><strong>Våran Slogan:</strong> bobobobo hehehehe</p>
         </div>
@@ -121,6 +119,7 @@
         <div class="footerbox">
             <h3 class="h3footer">Nyhetsbrev</h3>
             <p>Vi är högst seriösa och håller inte på med sånt skit</p>
+            <p><a class="tönt" href="https://www.forsvarsmakten.se/sv/information-och-fakta/var-historia/artiklar/saab-hjarta-flygvapnet/">Klicka här om vull vara cool</a></p>
         </div>
 
     </section>
