--- a/javaskript.html
+++ b/javaskript.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Javaskript</title>
-        
+        <meta charset="UTF-8">
     </head>
 <body>
 
@@ -11,7 +11,7 @@
 
 
 <button type="button" onclick="document.getElementById('demo').style.display='block'">Click</button>
-<p id="demo" style="display:none"><img src="https://static-ssl.businessinsider.com/image/5b64c0358ea82f32008b4d16-2241/spacex-crew-dragon-spaceship-nasa-commercial-crew-program-illustration-42878298755a9670c6596o.jp2"></p>
+<p id="demo" style="display:none"><img alt="hej" src="https://static-ssl.businessinsider.com/image/5b64c0358ea82f32008b4d16-2241/spacex-crew-dragon-spaceship-nasa-commercial-crew-program-illustration-42878298755a9670c6596o.jp2"></p>
 <br>
 <br>
 <button onclick="myalert()">General Kenobi</button>
