--- a/spel.html
+++ b/spel.html
@@ -61,6 +61,7 @@
 
         function right1() {
             alert("YES, YOU HAVE DONE IT, NOW FIND A LIFE");
+            window.open("https://www.youtube.com/watch?v=k2rDbRUDkds&ab_channel=CaptainSparklez");
         }
 
     </script>
