--- a/pingpong.html
+++ b/pingpong.html
@@ -30,7 +30,7 @@
     <canvas id="canvas" width="600" height="400"></canvas>
 
     <!-- link to script.js -->
-    <script type="text/javascript" src="js/pingpongscript.js"></script>
+    <script type="text/javascript" src="pingpongscript.js"></script>
 </body>
 
 </html>
