--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background: rgb(238, 237, 234)">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Home Page</title>
-</head>
-<body>
-
 <style>
     header{
         text-align: center;
@@ -13,7 +11,7 @@
             background-color: rgb(112, 175, 204);
             color: rgb(0, 0, 0);
             font-size: 30px;
-            height: 100px;
+            height: 10%;
     }
 
     .img{
@@ -24,22 +22,31 @@
         margin-left:100px;
     }
 
-    
+    .konstig{
+        width: 100%;
+        height: 250px;
+    }
 
 </style>
+</head>
+
+
+
+
+<body style="background: rgb(238, 237, 234)">
 
 <header>
     <h1>This is my page</h1>
 </header>
-<body>
+
 <p>Hello There</p>
-<p2>General kenobi</p2>
+<p>General kenobi</p>
 <br>
 <a href="https://nyafilmer.wtf/star-wars-episode-ii-attack-of-the-clones/">Very nice film</a>
 <br>
 <div class="img">
 <a href="https://en.wikipedia.org/wiki/Otto_von_Bismarck">
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" width="1000px" height="250px"/>
+<img class="konstig" alt="abooo"  src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Bismarck_pickelhaube.jpg/250px-Bismarck_pickelhaube.jpg" >
 </a>
 </div>
 <br>
@@ -63,7 +70,7 @@
 <br>
 <br>
 <a href="https://www.w3schools.com/html/default.asp">
-<img src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
+<img alt="aboooo" src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
 </a>
 <br>
 <br>
@@ -100,9 +107,4 @@
 
 </body>
 
-
-
-
-
-</head>
 </html>
