--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <br>
 <br>
 <a href="https://www.w3schools.com/html/default.asp">
-<img alt="aboooo" src="https://cached-images.bonnier.news/cms30/UploadedImages/2020/8/24/3cc4309f-b9fd-4608-84fd-1ba4a91d24c6/bigOriginal.jpg?interpolation=lanczos-none&fit=around%7C480:270&crop=480:h;center,top&output-quality=80&output-format=auto" />
+<img alt="aboooo" class="konstig" src="https://www.thoughtco.com/thmb/4Qub8noHQYRIU-RFhEMPXJbsMFo=/1024x671/filters:fill(auto,1)/hms-hood-large-56a61c3b3df78cf7728b642b.jpg" />
 </a>
 <br>
 <br>
