--- a/hemida/alltomvindö.html
+++ b/hemida/alltomvindö.html
@@ -21,7 +21,7 @@
         <!--logon i toppnavigeringen-->
         <div class="logo">
             <a href="alltomvindö.html">
-                <img src="bilder/Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
+                <img src="Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
             </a>
         </div>
 
@@ -81,7 +81,7 @@
 
     <!--Bilden under sidans titel-->
     <div class="avlångtoppbild">
-        <img src="bilder/vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
+        <img src="vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
     </div>
 
     <!--Första stycket på sidan-->
@@ -111,14 +111,14 @@
 
         <!--Bilden i första stycket-->
         <div class="bild1">
-            <img src="bilder/vindö50seglar.jpg" alt="Seglingsbild">
+            <img src="vindö50seglar.jpg" alt="Seglingsbild">
         </div>
 
     </div>
 
     <!--Bilden till andra stycket-->
     <div class="stycke2bild">
-        <img src="bilder/vindö22ritning.jpg" alt="aaaaaaaaaa">
+        <img src="vindö22ritning.jpg" alt="aaaaaaaaaa">
     </div>
 
     <!--Andra stycket-->
