--- a/hemida/byggandet.html
+++ b/hemida/byggandet.html
@@ -21,7 +21,7 @@
         <!--logon i toppnavigeringen-->
         <div class="logo">
             <a href="alltomvindö.html">
-                <img src="bilder/Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
+                <img src="Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
             </a>
         </div>
 
@@ -79,18 +79,18 @@
 
     <!--Bilden under sidans titel-->
     <div class="avlångtoppbild">
-        <img src="bilder/vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
+        <img src="vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
     </div>
 
     <!--Första stycket på sidan-->
     <div class="stycke1byggandet">
 
         <div class="bild1">
-            <img src="bilder/lucka.jpg" alt="bild">
+            <img src="lucka.jpg" alt="bild">
         </div>
 
         <div class="bild1">
-            <img src="bilder/förpik.jpg" alt="bild">
+            <img src="förpik.jpg" alt="bild">
         </div>
 
     </div>
@@ -135,11 +135,11 @@
     <div class="stycke3byggandet">
 
         <div class="bild1">
-            <img src="bilder/vindö50fördäck.jpg" alt="bild">
+            <img src="vindö50fördäck.jpg" alt="bild">
         </div>
 
         <div class="bild1">
-            <img src="bilder/kök.jpg" alt="bild">
+            <img src="kök.jpg" alt="bild">
         </div>
 
     </div>
