--- a/hemida/kontaktaoss.html
+++ b/hemida/kontaktaoss.html
@@ -21,7 +21,7 @@
         <!--logon i toppnavigeringen-->
         <div class="logo">
             <a href="alltomvindö.html">
-                <img src="bilder/Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
+                <img src="Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
             </a>
         </div>
 
@@ -79,7 +79,7 @@
 
     <!--Bilden under sidans titel-->
     <div class="avlångtoppbild">
-        <img src="bilder/vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
+        <img src="vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
     </div>
 
     <!--Vem driver denna sida stycke-->
@@ -100,7 +100,7 @@
         </div>
         <!--Bilden under stycket-->
         <div class="bild1">
-            <img src="bilder/storakarlsönatt.jpg" alt="aaaaaaaaaa">
+            <img src="storakarlsönatt.jpg" alt="aaaaaaaaaa">
         </div>
     </div>
 
@@ -136,7 +136,7 @@
 
         <!--Bilden under andra stycket-->
         <div class="bild1">
-            <img src="bilder/storakarlsösten.jpg" alt="aaaaaaaaaa">
+            <img src="storakarlsösten.jpg" alt="aaaaaaaaaa">
         </div>
 
     </div>
