--- a/hemida/vindö30.html
+++ b/hemida/vindö30.html
@@ -21,7 +21,7 @@
         <!--logon i toppnavigeringen-->
         <div class="logo">
             <a href="alltomvindö.html">
-                <img src="bilder/Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
+                <img src="Vindologgavit.png" alt="Väldigt fin bild på Vindö 50" id="logga">
             </a>
         </div>
 
@@ -79,7 +79,7 @@
 
     <!--Bilden under sidans titel-->
     <div class="avlångtoppbild">
-        <img src="bilder/vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
+        <img src="vindö50avlång.jpg" alt="Väldigt fin bild på Vindö 50">
     </div>
 
     <!--Första stycket på sidan-->
@@ -105,7 +105,7 @@
 
         <!--Bilden i första stycket-->
         <div class="bild1">
-            <img src="bilder/vindö30sida.jpg" alt="bild">
+            <img src="vindö30sida.jpg" alt="bild">
         </div>
 
     </div>
@@ -129,7 +129,7 @@
 
             <!--Bilden i andra stycket-->
             <div class="bild1">
-                <img src="bilder/vindö30uppifrån.jpg" alt="bild">
+                <img src="vindö30uppifrån.jpg" alt="bild">
             </div>
         </div>
 
